# view_planning_3d

./: .gitignore  CMakeLists.txt  README.md  README.txt  cam_traj_2024-11-07_00-51-15.txt  cam_traj_2024-11-07_00-53-26.txt  package.xml  test.cpp
include/: CalculateTools.h  Candidate.h  Converter.h  ConverterTools.h  Converter少.h  FOV.h  GazeboTools.h  GenerateArm.h  Map.h  MapObject.h  Object.h  Obstacles.h  Plane.h  TeleopMobile.h  ViewPlanning.h  Viewer.h  gazebo_rviz_tools.h  generate_candidate.h  sdf.h  visualize_arm_tools.h
include/core/: Ellipsoid.h  PriorInfer.h
include/gtsam/: BboxEllipsoidFactor.h  BboxPlaneArmLink.h  BboxPlaneArmLink2.h  BboxPlaneArmLinkFactor.h  BboxPlaneEllipsoidFactor.h
include/gtsam_quadrics/geometry/: BoundingBoxFactor.h  DualConic.h  HeightCameraFactor.h
scripts/: moveit_fk_fabo.py  moveit_ik_fabo.py
src/: Map.cpp  TeleopMobile.cpp  Viewer.cpp  candidate_ik_fabo.cpp  candidate_ik_fabo注释版.cpp  cartesian_candidate copy.cpp  fabo_cartesian_path.cpp  fabo_cartesian_path_one.cpp  fabo_cartesian_path_oritation.cpp  fabo_init.cpp  generate_candidate.cpp  sdf.cpp  test.cpp  test_cartesian_path.cpp  test_copycvmat.cpp
src_example/: TestBboxCameraFactor.cpp  TestBboxPlaneArmLink.cpp  TestCameraXaxisHorizontal.cpp  TestGtasmFactor.cpp  TestPlaneArmLinkFactor.cpp  ellipse_debug.cpp  error_cube_camera_debug.cpp  error_plane_endlink_debug.cpp
src_gpmp/: gpmp_fk_rm75.py  gpmp_fk_rm75_realgpmp.py  gpmp_fk_rm75_realgpmp_mutiangle.py  gpmp_realman copy.cpp  gpmp_realman(备份  删除许多cout).cpp  gpmp_realman.cpp  gpmp_realman_debug.cpp  gpmp_realman_setfromik_debug.cpp  init_cartesian_rm75.py  new_2024.py
src_gtsam_quadrics/: BboxCameraFactor.cpp  BoundingBoxFactor.cpp  ConstrainedDualQuadric.cpp  DualConic.cpp  HeightCameraFactor.cpp
src_moveit/: gpmp_realman.cpp  robot_state_ptr.cpp
src_object/: Converter.cc  Converter少.cc  FOV.cpp  MapObject.cpp  error_cube_camera_debug.cpp  error_cube_debug.cpp  error_plane_endlink_debug.cpp
src_object/core/: Ellipsoid.cpp  NonparamDA.cpp  Plane.cpp  PriorInfer.cpp
src_ros/: QF-ASLAM.cpp  pub_object_debug.cpp
src_wam/: circle_wam.cpp  ellipse_debug.cpp  gpmp_wam(待添加平面与立方体的误差).cpp  gpmp_wam_Reproduce_Matlab.cpp  gpmp_wam_getfromik_debug copy.cpp  gpmp_wam_getfromik_debug.cpp  gpmp_wam_old.cpp  object_direction copy.cpp  object_direction.cpp  sdf_visulization.cpp  wam_bboxcamera.cpp  wam_fk_from_gpmp.cpp  wam_getfromik_debug.cpp  wam_gpmp.cpp  wam_ik_only_endpoint.cpp  wam_ik_only_endpoint_from_gazebo_object.cpp  wam_numericalDerivative.cpp  wam_rotate.cpp
src_备份/: Converter.cc  cartesian_candidate.cpp  fabo_cartesian_path_one copy.cpp  fabo_ik_tf.cpp  get_current_joint_value.py  gpmp_fk_rm75.cpp  gpmp_fk_rm75.py  gpmp_fk_rm75_realgpmp_new.py  gpmp_realman.cpp  gpmp_realman_setfromik_debug.cpp  init_fk_rm75.py  init_ik_rm75.py  moveit_fk_fabo.cpp  robot_state_ptr2.cpp  test copy.cpp  test_bwdist.cpp  test_dis.cpp
